--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.2.2",
     "unocss": "^0.55.3",
+    "unocss-preset-chinese": "^0.0.7",
+    "unocss-preset-ease": "^0.0.3",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
