--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dev:js": "npm run build:js -- --mode development",
     "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:background build:js",
     "build:prepare": "esno scripts/prepare.ts",
-    "build:background": "vite build --config vite.config.background.ts",
+    "build:background": "vite build --config vite.config.background.mts",
     "build:web": "vite build",
-    "build:js": "vite build --config vite.config.content.ts",
+    "build:js": "vite build --config vite.config.content.mts",
     "pack": "cross-env NODE_ENV=production run-p pack:*",
     "pack:zip": "rimraf extension.zip && jszip-cli add extension/* -o ./extension.zip",
     "pack:crx": "crx pack extension -o ./extension.crx",
@@ -32,45 +32,46 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@ffflorian/jszip-cli": "^3.4.1",
-    "@iconify/json": "^2.2.106",
-    "@kirklin/eslint-config": "^0.5.2",
+    "@ffflorian/jszip-cli": "^3.6.4",
+    "@iconify/json": "^2.2.223",
+    "@kirklin/eslint-config": "^2.5.0",
     "@kirklin/reset-css": "^0.0.3",
-    "@playwright/test": "^1.37.1",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.5.6",
-    "@types/webextension-polyfill": "^0.10.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@vitejs/plugin-vue": "^4.3.3",
-    "@vue/compiler-sfc": "^3.3.4",
-    "@vue/test-utils": "^2.4.1",
-    "@vueuse/core": "^10.4.0",
-    "chokidar": "^3.5.3",
+    "@playwright/test": "^1.45.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.14.9",
+    "@types/webextension-polyfill": "^0.10.7",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/compiler-sfc": "^3.4.30",
+    "@vue/test-utils": "^2.4.6",
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/shared": "^10.11.0",
+    "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
-    "eslint": "^8.48.0",
-    "esno": "^0.17.0",
-    "fs-extra": "^11.1.1",
-    "jsdom": "^22.1.0",
+    "eslint": "^9.5.0",
+    "esno": "^4.7.0",
+    "fs-extra": "^11.2.0",
+    "jsdom": "^24.1.0",
     "kolorist": "^1.8.0",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^15.2.7",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^5.0.1",
-    "simple-git-hooks": "^2.9.0",
-    "typescript": "^5.2.2",
-    "unocss": "^0.55.3",
+    "rimraf": "^5.0.7",
+    "simple-git-hooks": "^2.11.1",
+    "typescript": "^5.5.2",
+    "unocss": "^0.61.0",
     "unocss-preset-chinese": "^0.0.7",
     "unocss-preset-ease": "^0.0.3",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.16.5",
-    "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.3",
-    "vue": "^3.3.4",
-    "vue-demi": "^0.14.5",
-    "web-ext": "^7.6.2",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-icons": "^0.19.0",
+    "unplugin-vue-components": "^0.27.2",
+    "vite": "^5.3.1",
+    "vitest": "^1.6.0",
+    "vue": "^3.4.30",
+    "vue-demi": "^0.14.8",
+    "web-ext": "^8.2.0",
     "webext-bridge": "^6.0.1",
-    "webextension-polyfill": "^0.10.0"
+    "webextension-polyfill": "^0.12.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
