--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,12 @@
 {
-  "editor.formatOnSave": false,
+  "cSpell.words": ["Vitesse"],
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "vite.autoStart": false,
+  "eslint.experimental.useFlatConfig": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll": false,
-    "source.fixAll.eslint": true, // this allows ESLint to auto fix on save
-    "source.organizeImports": false
+    "source.fixAll.eslint": "explicit"
   },
-  // ESLint config: https://github.com/kirklin/eslint-config
-  "eslint.codeAction.showDocumentation": {
-    "enable": true
-  },
-  "eslint.quiet": true,
-  "eslint.validate": [
-    "javascript",
-    "typescript",
-    "javascriptreact",
-    "typescriptreact",
-    "vue",
-    "html",
-    "markdown",
-    "json",
-    "jsonc",
-    "json5"
-  ],
-  "prettier.enable": false,
-  "prettier.printWidth": 200,
-  "prettier.semi": true,
-  "prettier.singleQuote": false
+  "files.associations": {
+    "*.css": "postcss"
+  }
 }
